alottt of small refactoring + adding NPC java style scripting, need to finallize the npc scripts handling themself but it's 99% DONE!